Renomeação das propriedades de ModeloVeiculoViewModel; Teste de unidade para controller de ModeloVeiculo implementado, #71.

--- a/Codigo/Frota/FrotaWeb/Views/ModeloVeiculo/Delete.cshtml
+++ b/Codigo/Frota/FrotaWeb/Views/ModeloVeiculo/Delete.cshtml
@@ -14,7 +14,7 @@
             <div class="col-md-6">
                 <div class="type-container offset-md-1 itens-center">
                     <label class="label">Marca</label>
-                    <p>@Model.IdMarca</p>
+                    <p>@Model.IdMarcaVeiculo</p>
                 </div>
             </div>
             <div class="col-md-6">
@@ -28,7 +28,7 @@
             <div class="col-md-6">
                 <div class="type-container offset-md-1 itens-center">
                     <label class="label">Capacidade do Tanque</label>
-                    <p>@Model.CapacidadeTanqueCombustivel</p>
+                    <p>@Model.CapacidadeTanque</p>
                 </div>
             </div>
         </div>
