--- a/Codigo/Frota/FrotaWeb/Views/ModeloVeiculo/Edit.cshtml
+++ b/Codigo/Frota/FrotaWeb/Views/ModeloVeiculo/Edit.cshtml
@@ -14,9 +14,9 @@
 		<div class="row mb-3">
 			<div class="col-md-6">
 				<div class="type-container offset-md-1 itens-center">
-					<label asp-for="IdMarca" class="label">Marca</label>
-					<input asp-for="IdMarca" class="form-control" placeholder="" />
-					<span asp-validation-for="IdMarca" class="text-danger"></span>
+					<label asp-for="IdMarcaVeiculo" class="label">Marca</label>
+					<input asp-for="IdMarcaVeiculo" class="form-control" placeholder="" />
+					<span asp-validation-for="IdMarcaVeiculo" class="text-danger"></span>
 				</div>
 			</div>
 			<div class="col-md-6">
@@ -30,9 +30,9 @@
 		<div class="row mb-3">
 			<div class="col-md-6">
 				<div class="type-container offset-md-1 itens-center">
-					<label asp-for="CapacidadeTanqueCombustivel" class="label">Capacidade do Tanque</label>
-					<input asp-for="CapacidadeTanqueCombustivel" class="form-control" placeholder="" />
-					<span asp-validation-for="CapacidadeTanqueCombustivel" class="text-danger"></span>
+					<label asp-for="CapacidadeTanque" class="label">Capacidade do Tanque</label>
+					<input asp-for="CapacidadeTanque" class="form-control" placeholder="" />
+					<span asp-validation-for="CapacidadeTanque" class="text-danger"></span>
 				</div>
 			</div>
 		</div>
