--- a/Codigo/Frota/FrotaWeb/Areas/Identity/Pages/Account/Register.cshtml
+++ b/Codigo/Frota/FrotaWeb/Areas/Identity/Pages/Account/Register.cshtml
@@ -2,53 +2,194 @@
 @model RegisterModel
 @{
     ViewData["Title"] = "Registrar novo Utilizador";
+    Layout = null;
 }
 <head>
-    <style>
-        header {
-            display: none;
-        }
 
-        body {
-            background: linear-gradient(50deg, white 95%, #08448c 5%);
+    <style>
+        header, #sidebar {
+            display: none;
         }
 
         footer {
             background-color: #08448c;
         }
 
-    </style>
+        * {
+            margin: 0;
+            padding: 0;
+            box-sizing: border-box;
+            font-family: Arial, sans-serif;
+        }
 
+        body {
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            min-height: 100vh;
+            background-color: #e6f0fa;
+        }
+
+        .container {
+            margin: 0;
+            padding: 0;
+            display: flex;
+            flex-direction: row;
+            width: 100vw;
+            background-color: #D9E9F4;
+        }
+
+        .left-section {
+            position: relative;
+            width: 60%;
+            height: 100vh;
+        }
+
+            .left-section img {
+                position: absolute;
+                top: 0;
+                left: 0;
+                right: 0;
+                bottom: 0;
+                width: 100%;
+                height: 100%;
+                object-fit: cover;
+            }
+
+        .right-section {
+            height: 100vh;
+            width: 40%;
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            justify-content: center;
+        }
+
+        .form-container {
+            width: 300px;
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            justify-content: center;
+            background-color: #D9E9F4;
+        }
+
+        .right-section img {
+            width: 150px;
+            height: auto;
+            margin: 15px;
+        }
+
+        .form {
+            width: 100%;
+            max-width: 350px;
+            display: flex;
+            flex-direction: column;
+        }
+
+            .form p {
+                height: 35px;
+                font-size: 15px;
+                display: flex;
+                flex-direction: column;
+                text-align: left;
+                justify-content: center;
+                align-items: right;
+                font-weight: 600;
+            }
+
+            .form input {
+                padding: 10px;
+                font-size: 1em;
+                border: 0px;
+                border-radius: 5px;
+                background-color: #fff;
+            }
+
+                .form input:focus {
+                    border: 1px solid #ccc;
+                    outline: none;
+                    border-color: #0C69AB;
+                }
+
+            .form a {
+                text-align: left;
+                display: flex;
+                flex-direction: column;
+                justify-content: center;
+                height: 40px;
+                font-size: 17px;
+                color: #0C69AB;
+                text-decoration: none;
+                font-weight: 600;
+            }
+
+                .form a:hover {
+                    color: #000000;
+                }
+
+            .form button {
+                margin-top: 23px;
+                margin-left: 10%;
+                margin-right: 10%;
+                padding: 10px;
+                font-size: 1em;
+                color: white;
+                background-color: #0C69AB;
+                border: none;
+                border-radius: 5px;
+                cursor: pointer;
+                transition: background-color 0.3s ease;
+            }
+
+                .form button:hover {
+                    background-color: #155cb0;
+                }
+
+        @@media screen and (max-width: 930px) {
+            .left-section {
+                width: 0%;
+                height: 50vh;
+            }
+
+            .right-section {
+                width: 100%;
+            }
+
+            .form-container {
+                border: 2px solid #0C69AB;
+                border-radius: 10px;
+                padding: 20px;
+            }
+        }
+    </style>
 </head>
 
-<p></p>
-<p></p>
-<h1>@ViewData["Title"]</h1>
-
-<div class="row">
-    <div class="col-md-4">
-        <form id="registerForm" asp-route-returnUrl="@Model.ReturnUrl" method="post">
-            
-            
-            <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-            <div class="form-floating">
-                <input asp-for="Input.Email" class="form-control" autocomplete="username" aria-required="true" />
-                <label asp-for="Input.Email">Email</label>
-                <span asp-validation-for="Input.Email" class="text-danger"></span>
-            </div>
-            <div class="form-floating">
-                <input asp-for="Input.Password" class="form-control" autocomplete="new-password" aria-required="true" />
-                <label asp-for="Input.Password">Senha</label>
-                <span asp-validation-for="Input.Password" class="text-danger"></span>
-            </div>
-            <div class="form-floating">
-                <input asp-for="Input.ConfirmPassword" class="form-control" autocomplete="new-password" aria-required="true" />
-                <label asp-for="Input.ConfirmPassword">Confirmar senha</label>
-                <span asp-validation-for="Input.ConfirmPassword" class="text-danger"></span>
-            </div>
-            <button id="registerSubmit" type="submit" class="w-100 btn btn-lg btn-primary" style="background-color:#08448c"><i class="fa fa-user-plus me-2"></i>Registrar</button>
-        </form>
+<div class="container">
+    <div class="left-section">
+        <img src="~/img/background-login.png" alt="background" />
     </div>
+    <section class="right-section">
+        <form id="registerForm" asp-route-returnUrl="@Model.ReturnUrl" method="post">
+            <div class="form-container">
+                <img src="~/img/logo.png" alt="Frota logo" />
+                <div class="form">
+                    <h1>@ViewData["Title"]</h1>
+                    <p>Email</p>
+                    <input asp-for="Input.Email" class="form-control" autocomplete="username" aria-required="true" />
+                    <span asp-validation-for="Input.Email" class="text-danger"></span>
+                    <p>Senha</p>
+                    <input asp-for="Input.Password" class="form-control" autocomplete="new-password" aria-required="true" />
+                    <span asp-validation-for="Input.Password" class="text-danger"></span>
+                    <p>Confirmar Senha</p>
+                    <input asp-for="Input.ConfirmPassword" class="form-control" autocomplete="new-password" aria-required="true" />
+                    <span asp-validation-for="Input.ConfirmPassword" class="text-danger"></span>
+                    <div asp-validation-summary="ModelOnly" class="text-danger"></div>
+                    <button id="registerSubmit" type="submit">Registrar</button>
+                </div>
+            </div>
+        </form>
+    </section>
 </div>
 
 @section Scripts {
