--- a/Codigo/Frota/FrotaWeb/Areas/Identity/Pages/Account/Register.cshtml
+++ b/Codigo/Frota/FrotaWeb/Areas/Identity/Pages/Account/Register.cshtml
@@ -1,197 +1,248 @@
 ﻿@page
 @model RegisterModel
 @{
-    ViewData["Title"] = "Registrar novo Utilizador";
-    Layout = null;
+	ViewData["Title"] = "Registrar novo Utilizador";
+	Layout = null;
 }
 <head>
 
-    <style>
-        header, #sidebar {
-            display: none;
-        }
+	<style>
+		header, #sidebar {
+			display: none;
+		}
 
-        footer {
-            background-color: #08448c;
-        }
+		footer {
+			background-color: #08448c;
+		}
 
-        * {
-            margin: 0;
-            padding: 0;
-            box-sizing: border-box;
-            font-family: Arial, sans-serif;
-        }
+		* {
+			margin: 0;
+			padding: 0;
+			box-sizing: border-box;
+			font-family: Arial, sans-serif;
+		}
 
-        body {
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            min-height: 100vh;
-            background-color: #e6f0fa;
-        }
+		body {
+			display: flex;
+			justify-content: center;
+			align-items: center;
+			min-height: 100vh;
+			background-color: #e6f0fa;
+		}
 
-        .container {
-            margin: 0;
-            padding: 0;
-            display: flex;
-            flex-direction: row;
-            width: 100vw;
-            background-color: #D9E9F4;
-        }
+		.container {
+			margin: 0;
+			padding: 0;
+			display: flex;
+			flex-direction: row;
+			width: 100vw;
+			background-color: #D9E9F4;
+		}
 
-        .left-section {
-            position: relative;
-            width: 60%;
-            height: 100vh;
-        }
+		.left-section {
+			position: relative;
+			width: 60%;
+			height: 100vh;
+		}
 
-            .left-section img {
-                position: absolute;
-                top: 0;
-                left: 0;
-                right: 0;
-                bottom: 0;
-                width: 100%;
-                height: 100%;
-                object-fit: cover;
-            }
+			.left-section img {
+				position: absolute;
+				top: 0;
+				left: 0;
+				right: 0;
+				bottom: 0;
+				width: 100%;
+				height: 100%;
+				object-fit: cover;
+			}
 
-        .right-section {
-            height: 100vh;
-            width: 40%;
-            display: flex;
-            flex-direction: column;
-            align-items: center;
-            justify-content: center;
-        }
+		.right-section {
+			height: 100vh;
+			width: 40%;
+			display: flex;
+			flex-direction: column;
+			align-items: center;
+			justify-content: center;
+		}
 
-        .form-container {
-            width: 300px;
-            display: flex;
-            flex-direction: column;
-            align-items: center;
-            justify-content: center;
-            background-color: #D9E9F4;
-        }
+		.form-container {
+			width: 300px;
+			display: flex;
+			flex-direction: column;
+			align-items: center;
+			justify-content: center;
+			background-color: #D9E9F4;
+			margin-top: -100px;
+		}
 
-        .right-section img {
-            width: 150px;
-            height: auto;
-            margin: 15px;
-        }
+		.right-section img {
+			width: 150px;
+			height: auto;
+			margin: 15px;
+		}
 
-        .form {
-            width: 100%;
-            max-width: 350px;
-            display: flex;
-            flex-direction: column;
-        }
+		.form {
+			width: 100%;
+			max-width: 350px;
+			display: flex;
+			flex-direction: column;
+		}
 
-            .form p {
-                height: 35px;
-                font-size: 15px;
-                display: flex;
-                flex-direction: column;
-                text-align: left;
-                justify-content: center;
-                align-items: right;
-                font-weight: 600;
-            }
+			.form p {
+				height: 35px;
+				font-size: 15px;
+				display: flex;
+				flex-direction: column;
+				text-align: left;
+				justify-content: center;
+				align-items: right;
+				font-weight: 600;
+			}
 
-            .form input {
-                padding: 10px;
-                font-size: 1em;
-                border: 0px;
-                border-radius: 5px;
-                background-color: #fff;
-            }
+			.form input {
+				padding: 10px;
+				font-size: 1em;
+				border: 0px;
+				border-radius: 5px;
+				background-color: #fff;
+			}
 
-                .form input:focus {
-                    border: 1px solid #ccc;
-                    outline: none;
-                    border-color: #0C69AB;
-                }
+				.form input:focus {
+					border: 1px solid #ccc;
+					outline: none;
+					border-color: #0C69AB;
+				}
 
-            .form a {
-                text-align: left;
-                display: flex;
-                flex-direction: column;
-                justify-content: center;
-                height: 40px;
-                font-size: 17px;
-                color: #0C69AB;
-                text-decoration: none;
-                font-weight: 600;
-            }
+			.form a {
+				text-align: left;
+				display: flex;
+				flex-direction: column;
+				justify-content: center;
+				height: 40px;
+				font-size: 17px;
+				color: #0C69AB;
+				text-decoration: none;
+				font-weight: 600;
+			}
 
-                .form a:hover {
-                    color: #000000;
-                }
+				.form a:hover {
+					color: #000000;
+				}
 
-            .form button {
-                margin-top: 23px;
-                margin-left: 10%;
-                margin-right: 10%;
-                padding: 10px;
-                font-size: 1em;
-                color: white;
-                background-color: #0C69AB;
-                border: none;
-                border-radius: 5px;
-                cursor: pointer;
-                transition: background-color 0.3s ease;
-            }
+			.form button {
+				margin-top: 23px;
+				margin-left: 10%;
+				margin-right: 10%;
+				padding: 10px;
+				font-size: 1em;
+				color: white;
+				background-color: #0C69AB;
+				border: none;
+				border-radius: 5px;
+				cursor: pointer;
+				transition: background-color 0.3s ease;
+			}
 
-                .form button:hover {
-                    background-color: #155cb0;
-                }
+				.form button:hover {
+					background-color: #155cb0;
+				}
 
-        @@media screen and (max-width: 930px) {
-            .left-section {
-                width: 0%;
-                height: 50vh;
-            }
+		#login-link {
+			display: flex;
+			justify-content: center;
+			flex-direction: row;
+			align-items: center;
+			position: absolute;
+			bottom: 30px;
+			font-size: 16px;
+			color: #000000;
+			font-weight: 600;
+		}
 
-            .right-section {
-                width: 100%;
-            }
+			#login-link a {
+				margin-left: 5px;
+				color: #1a73e8;
+				text-decoration: none;
+			}
 
-            .form-container {
-                border: 2px solid #0C69AB;
-                border-radius: 10px;
-                padding: 20px;
-            }
-        }
-    </style>
+				#login-link a:hover {
+					color: #FF0000;
+				}
+
+		.messages {
+			color: red;
+			text-align: center;
+			padding-top: 5px;
+		}
+
+			.messages li {
+				list-style-type: none;
+				padding-left: 0;
+				margin: 0;
+			}
+
+		@@media screen and (max-width: 930px) {
+			.left-section {
+				width: 0%;
+				height: 50vh;
+			}
+
+			.right-section {
+				width: 100%;
+				padding-bottom: 10px;
+				height: auto;
+				padding-bottom: 20px;
+			}
+
+			.form-container {
+				border: 2px solid #0C69AB;
+				border-radius: 10px;
+				padding: 20px;
+				margin-top: 40px;
+				margin-bottom: 10px;
+			}
+
+			#login-link {
+				margin-top: 15px;
+				position: relative;
+				bottom: 0;
+			}
+		}
+	</style>
 </head>
 
 <div class="container">
-    <div class="left-section">
-        <img src="~/img/background-login.png" alt="background" />
-    </div>
-    <section class="right-section">
-        <form id="registerForm" asp-route-returnUrl="@Model.ReturnUrl" method="post">
-            <div class="form-container">
-                <img src="~/img/logo.png" alt="Frota logo" />
-                <div class="form">
-                    <h1>@ViewData["Title"]</h1>
-                    <p>Email</p>
-                    <input asp-for="Input.Email" class="form-control" autocomplete="username" aria-required="true" />
-                    <span asp-validation-for="Input.Email" class="text-danger"></span>
-                    <p>Senha</p>
-                    <input asp-for="Input.Password" class="form-control" autocomplete="new-password" aria-required="true" />
-                    <span asp-validation-for="Input.Password" class="text-danger"></span>
-                    <p>Confirmar Senha</p>
-                    <input asp-for="Input.ConfirmPassword" class="form-control" autocomplete="new-password" aria-required="true" />
-                    <span asp-validation-for="Input.ConfirmPassword" class="text-danger"></span>
-                    <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-                    <button id="registerSubmit" type="submit">Registrar</button>
-                </div>
-            </div>
-        </form>
-    </section>
+	<div class="left-section">
+		<img src="~/img/background-login.png" alt="background" />
+	</div>
+	<section class="right-section">
+		<form asp-route-returnUrl="@Model.ReturnUrl" method="post">
+			<div class="form-container">
+				<img src="~/img/logo.png" alt="Frota logo" />
+				<div class="form">
+					<div asp-validation-summary="ModelOnly" class="messages"></div>
+					<p>Nome</p>
+					<input asp-for="Input.UserName" class="form-control" autocomplete="username" aria-required="true" />
+					<span asp-validation-for="Input.UserName" class="messages"></span>
+					<p>Email</p>
+					<input asp-for="Input.Email" class="form-control" autocomplete="username" aria-required="true" />
+					<span asp-validation-for="Input.Email" class="messages"></span>
+					<p>Senha</p>
+					<input asp-for="Input.Password" class="form-control" autocomplete="new-password" aria-required="true" />
+					<span asp-validation-for="Input.Password" class="messages"></span>
+					<p>Confirmar Senha</p>
+					<input asp-for="Input.ConfirmPassword" class="form-control" autocomplete="new-password" aria-required="true" />
+					<span asp-validation-for="Input.ConfirmPassword" class="messages"></span>
+					<button id="registerSubmit" type="submit">Registrar-se</button>
+				</div>
+				<div id="login-link">
+					Cancelar operação? <a asp-page="./Login" asp-route-returnUrl="@Model.ReturnUrl">Voltar</a>
+				</div>
+			</div>
+		</form>
+	</section>
 </div>
 
 @section Scripts {
-    <partial name="_ValidationScriptsPartial" />
+	<partial name="_ValidationScriptsPartial" />
 }
