--- a/Codigo/Frota/FrotaWeb/Areas/Identity/Pages/Account/Login.cshtml
+++ b/Codigo/Frota/FrotaWeb/Areas/Identity/Pages/Account/Login.cshtml
@@ -101,7 +101,7 @@
 			.form input {
 				padding: 10px;
 				font-size: 1em;
-				border: 0px;
+				border: 1px solid rgba(0, 0, 0, 0.25);
 				border-radius: 5px;
 				background-color: #fff;
 			}
