Alterado o modelo de banco, percurso passa a ter o id como chave primária. Abastecimento foi alterado, só mantem relação com fornecedor e percurso. Implementado o caso de uso para percurso e teste da service

--- a/Codigo/Frota/FrotaWeb/Views/Abastecimento/Create.cshtml
+++ b/Codigo/Frota/FrotaWeb/Views/Abastecimento/Create.cshtml
@@ -3,51 +3,56 @@
 @{
     ViewData["Title"] = "Create";
 }
-<link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
 
+<h1>Create</h1>
 
-<div class="box-box">
-    
-    <a asp-action="Index">
-        <div class="my-round-button">
-            <span class="material-symbols-outlined">
-                arrow_back
-            </span>
-        </div>
-    </a>
-    
-    <h3>ABT-(id)</h3>
+<h4>AbastecimentoViewModel</h4>
+<hr />
+<div class="row">
+    <div class="col-md-4">
+        <form asp-action="Create">
+            <div asp-validation-summary="ModelOnly" class="text-danger"></div>
+            <div class="form-group">
+                <label asp-for="Id" class="control-label"></label>
+                <input asp-for="Id" class="form-control" />
+                <span asp-validation-for="Id" class="text-danger"></span>
+            </div>
+            <div class="form-group">
+                <label asp-for="IdPercurso" class="control-label"></label>
+                <input asp-for="IdPercurso" class="form-control" />
+                <span asp-validation-for="IdPercurso" class="text-danger"></span>
+            </div>
+            <div class="form-group">
+                <label asp-for="IdFornecedor" class="control-label"></label>
+                <input asp-for="IdFornecedor" class="form-control" />
+                <span asp-validation-for="IdFornecedor" class="text-danger"></span>
+            </div>
+            <div class="form-group">
+                <label asp-for="DataHora" class="control-label"></label>
+                <input asp-for="DataHora" class="form-control" />
+                <span asp-validation-for="DataHora" class="text-danger"></span>
+            </div>
+            <div class="form-group">
+                <label asp-for="Odometro" class="control-label"></label>
+                <input asp-for="Odometro" class="form-control" />
+                <span asp-validation-for="Odometro" class="text-danger"></span>
+            </div>
+            <div class="form-group">
+                <label asp-for="Litros" class="control-label"></label>
+                <input asp-for="Litros" class="form-control" />
+                <span asp-validation-for="Litros" class="text-danger"></span>
+            </div>
+            <div class="form-group">
+                <input type="submit" value="Create" class="btn btn-primary" />
+            </div>
+        </form>
+    </div>
 </div>
 
-
-<div class="abastecer-container">
-    <span class="material-symbols-outlined" style="color:darkblue;font-size:3em;">
-        local_gas_station
-    </span>
-    <h4 class="title-abastecer">Abastecer</h4>
+<div>
+    <a asp-action="Index">Back to List</a>
 </div>
 
-<hr/>
-
-
-<form asp-action="Create" class="col-center">
-    <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-    <div class="form-group">
-        <label asp-for="Odometro" class="my-text-label"></label>
-        <input asp-for="Odometro" placeholder="Leitura do Odômetro" class="form-control" />
-        <span asp-validation-for="Odometro" class="text-danger" ></span>
-    </div>
-    <div class="form-group">
-        <label asp-for="Litros" class="my-text-label"></label>
-        <input asp-for="Litros" placeholder="200 L" class="form-control"/>
-        <span asp-validation-for="Litros" class="text-danger"></span>
-    </div>
-    <div class="form-group">
-        <input type="submit" value="Confirmar" class="buttons-input" />
-    </div>
-</form>
-    
--->
 @section Scripts {
     @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
 }
