--- a/Codigo/Frota/FrotaWeb/Views/Shared/_Layout.cshtml
+++ b/Codigo/Frota/FrotaWeb/Views/Shared/_Layout.cshtml
@@ -114,6 +114,11 @@
 						</a>
 					</li>
 					<li>
+						<a class="nav-link" asp-area="" asp-controller="Percurso" asp-action="Index">
+							<i class="fa fa-clipboard-check mr-3"></i>Percurso
+						</a>
+					</li>
+					<li>
 						<a class="nav-link" asp-area="" asp-controller="UnidadeAdministrativa" asp-action="Index">
 							<i class="fa fa-building mr-3"></i>Unidade Administrativa
 						</a>
