--- a/Codigo/Frota/FrotaWeb/Views/Shared/_Layout.cshtml
+++ b/Codigo/Frota/FrotaWeb/Views/Shared/_Layout.cshtml
@@ -1,4 +1,10 @@
-﻿<!DOCTYPE html>
+﻿@using Microsoft.AspNetCore.Identity
+@using FrotaWeb.Areas.Identity.Data
+
+@inject SignInManager<UsuarioIdentity> SignInManager
+@inject UserManager<UsuarioIdentity> UserManager
+
+<!DOCTYPE html>
 <html lang="pt-br">
 <head>
 	<meta charset="utf-8" />
@@ -13,7 +19,7 @@
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600&display=swap"/>
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,1,0" />
 </head>
-<body>
+<body style="background-color: #D2E5F2">
 	<div class="wrapper d-flex align-items-stretch">
         <aside class="sidebar">
             <button class="toggle" type="button" onclick="toggleOpen()">
@@ -25,23 +31,21 @@
                     <h1>Frota</h1>
                 </div>
                 <nav class="menu">
-                    <a></a>
+                    
                     <button id="Home" type="button" onclick="window.location.href='@Url.Action("Index", "Home")';">
                         <span class="material-symbols-outlined">home</span>
                         <p>Página Inicial</p>
                     </button>
-                    <a></a>
+                    
                     <button id="Manutencao" type="button" onclick="toggleSubmenu('manutencao-submenu')">
                         <span class="material-symbols-outlined">build</span>
                         <p>Manutenção</p>
                     </button>
                     <!--expande manutenção-->
                     <div class="submenu" id="manutencao-submenu">
-                        <a></a>
                         <button type="button" onclick="window.location.href='@Url.Action("Index", "Solicitacaomanutencao")';">
                             <p>Solicitar Manutenção</p>
                         </button>
-                        <a></a>
                         <button type="button" onclick="window.location.href='@Url.Action("Index", "Manutencao")';">
                             <p>Manutenção</p>
                         </button>
@@ -69,16 +73,16 @@
                     </button>
                     <!--expande veiculos-->
                     <div class="submenu" id="veiculos-submenu">
-                        <button id="Veiculo-submenu" type="button" onclick="window.location.href='@Url.Action("Index", "Veiculo")';">
+                        <button type="button" onclick="window.location.href='@Url.Action("Index", "Veiculo")';">
                             <p>Veículos</p>
                         </button>
-                        <button id="Abastecimento-submenu" type="button" onclick="window.location.href='@Url.Action("Index", "Abastecimento")';">
+                        <button type="button" onclick="window.location.href='@Url.Action("Index", "Abastecimento")';">
                             <p>Abastecimentos</p>
                         </button>
-                        <button id="MarcaVeiculo-submenu" type="button" onclick="window.location.href='@Url.Action("Index", "MarcaVeiculo")';">
+                        <button type="button" onclick="window.location.href='@Url.Action("Index", "MarcaVeiculo")';">
                             <p>Marcas de Veículos</p>
                         </button>
-                        <button id="ModeloVeiculo-submenu" type="button" onclick="window.location.href='@Url.Action("Index", "ModeloVeiculo")';">
+                        <button type="button" onclick="window.location.href='@Url.Action("Index", "ModeloVeiculo")';">
                             <p>Modelos de Veículos</p>
                         </button>
                     </div>
@@ -106,17 +110,16 @@
                         <span class="material-symbols-outlined">apartment</span>
                         <p>Unidade Administrativa</p>
                     </button>
+                    <div class="login-button">
+                        <a class="manage-link" asp-area="Identity" asp-page="/Account/Manage/Index">
+                            <span class="material-symbols-outlined" style="margin-left: 22px;">account_circle</span>
+                            <p class="profile-link">@UserManager.GetUserName(User)</p>
+                        </a>
+                        <a class="logout-link" data-bs-toggle="modal" data-bs-target="#sairModal">
+                            <span class="material-symbols-outlined" style="margin-right: 22px;">logout</span>
+                        </a>
+                    </div>
                 </nav>
-                <!--botão login-->
-                <div class="login-button">
-                    <a>
-                        <span class="material-symbols-outlined" style="margin-left: 22px;">account_circle</span>
-                        <p class="profile-link">Perfil</p>
-                    </a>
-                    <a class="logout-link" data-bs-toggle="modal" data-bs-target="#sairModal">
-                        <span class="material-symbols-outlined" style="margin-right: 22px;">logout</span>
-                    </a>
-                </div>
             </div>
         </aside>
 		<!-- Page Content -->
