--- a/Codigo/Frota/FrotaWeb/wwwroot/css/form.css
+++ b/Codigo/Frota/FrotaWeb/wwwroot/css/form.css
@@ -1,21 +1,4 @@
-﻿p {
-    color: #000;
-    text-align: center;
-    width: 75%;
-    padding: 5px 10px;
-    border: 1px solid var(--bg);
-    border-radius: 5px;
-    box-shadow: 0px 1px 2px var(--grey);
-    font-size: 1rem;
-    line-height: 1.5;
-    background-color: inherit;
-    color: black;
-    height: 3.5rem;
-    box-sizing: border-box;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-}
+﻿
 
 .cor {
     color: #03438b;
